# GOIT_WEB_dz14

GOIT_WEB_dz14/: pyproject.toml
GOIT_WEB_dz14/docs/: conf.py
GOIT_WEB_dz14/migrations/versions/: 7f5e9d1a3b2c_add_user.py
GOIT_WEB_dz14/src/services/: email.py
Tests/: pyproject.toml
Tests/migrations/versions/: 8c7e2f6a9b04_init.py  9a8b6c5d4e3f_user_add_confirmed.py
Tests/src/: schemas.py
Tests/src/conf/: config.py
Tests/src/database/: db.py
Tests/tests/: conftest.py  test_route_contacts.py  test_unit_repository_contacts.py
