[tool.poetry]
name = "GOIT_WEB_dz14"
version = "0.1.0"
description = ""
authors = ["ArleKinG44 <denpolet@gmail.com>"]
readme = "README.md"
packages = [{include = "GOIT_WEB_dz14"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlalchemy = "^2.0.27"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
pydantic = "^2.6.3"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
fastapi-mail = "^1.4.1"
django = "^5.0.4"
pillow = "^10.2.0"
pymongo = "^4.6.2"
mongoengine = "0.27.0"
python-dotenv = "^1.0.1"
django-environ = "^0.11.2"
asyncio-redis = "^0.16.0"
fastapi-limiter = "^0.1.6"
cloudinary = "^1.39.0"
pydantic-settings = "^2.2.1"
pytest = "^8.2.0"


[tool.pytest.ini_options]
pythonpath = ["."]


[tool.poetry.group.dev.dependencies]
sphinx = "^7.3.7"


[tool.poetry.group.test.dependencies]
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"