[tool.poetry]
name = "GOIT_WEB_dz14_(Test)"
version = "0.1.0"
description = ""
authors = ["ArleKinG44 <denpolet@gmail.com>"]
readme = "README.md"
packages = [{include = "GOIT_WEB_dz14_(Test)"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlalchemy = "^2.0.27"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
fastapi-mail = "^1.4.1"
pillow = "^10.2.0"
python-dotenv = "^1.0.1"
asyncio-redis = "^0.16.0"
fastapi-limiter = "^0.1.6"
cloudinary = "^1.39.0"
pytest = "^8.2.0"


[tool.poetry.group.test.dependencies]
httpx = "^0.27.0"

[tool.pytest.ini_options]
pythonpath = ["."]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"